Increased amount of processing sockets

--- a/docker/app/supervisor.conf
+++ b/docker/app/supervisor.conf
@@ -18,63 +18,63 @@ autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23456.log
 
-[programm:segmentation_socket_server_23457]
+[program:segmentation_socket_server_23457]
 command=python3 /var/www/app/app/Python/decimer_segmentation_server.py 23457
 autostart=true
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23457.log
 
-[programm:segmentation_socket_server_23458]
+[program:segmentation_socket_server_23458]
 command=python3 /var/www/app/app/Python/decimer_segmentation_server.py 23458
 autostart=true
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23458.log
 
-[programm:segmentation_socket_server_23459]
+[program:segmentation_socket_server_23459]
 command=python3 /var/www/app/app/Python/decimer_segmentation_server.py 23459
 autostart=true
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23459.log
 
-[programm:segmentation_socket_server_23460]
+[program:segmentation_socket_server_23460]
 command=python3 /var/www/app/app/Python/decimer_segmentation_server.py 23460
 autostart=true
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23460.log
 
-[programm:segmentation_socket_server_23461]
+[program:segmentation_socket_server_23461]
 command=python3 /var/www/app/app/Python/decimer_segmentation_server.py 23461
 autostart=true
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23461.log
 
-[programm:segmentation_socket_server_23462]
+[program:segmentation_socket_server_23462]
 command=python3 /var/www/app/app/Python/decimer_segmentation_server.py 23462
 autostart=true
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23462.log
 
-[programm:segmentation_socket_server_23463]
+[program:segmentation_socket_server_23463]
 command=python3 /var/www/app/app/Python/decimer_segmentation_server.py 23463
 autostart=true
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23463.log
 
-[programm:segmentation_socket_server_23464]
+[program:segmentation_socket_server_23464]
 command=python3 /var/www/app/app/Python/decimer_segmentation_server.py 23464
 autostart=true
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23464.log
 
-[programm:segmentation_socket_server_23465]
+[program:segmentation_socket_server_23465]
 command=python3 /var/www/app/app/Python/decimer_segmentation_server.py 23465
 autostart=true
 autorestart=true
@@ -96,28 +96,28 @@ autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/ocsr_socket_server_65433.log
 
-[programm:ocsr_socket_server_65434]
+[program:ocsr_socket_server_65434]
 command=python3 /var/www/app/app/Python/decimer_predictor_server.py 65434
 autostart=true
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/ocsr_socket_server_65434.log
 
-[programm:ocsr_socket_server_65435]
+[program:ocsr_socket_server_65435]
 command=python3 /var/www/app/app/Python/decimer_predictor_server.py 65435
 autostart=true
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/ocsr_socket_server_65435.log
 
-[programm:ocsr_socket_server_65436]
+[program:ocsr_socket_server_65436]
 command=python3 /var/www/app/app/Python/decimer_predictor_server.py 65436
 autostart=true
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/ocsr_socket_server_65436.log
 
-[programm:ocsr_socket_server_65437]
+[program:ocsr_socket_server_65437]
 command=python3 /var/www/app/app/Python/decimer_predictor_server.py 65437
 autostart=true
 autorestart=true
@@ -131,35 +131,35 @@ autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/stout_socket_server_12345.log
 
-[programm:stout_socket_server_12346]
+[program:stout_socket_server_12346]
 command=python3 /var/www/app/app/Python/stout_predictor_server.py 12346
 autostart=true
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/stout_socket_server_12346.log
 
-[programm:stout_socket_server_12347]
+[program:stout_socket_server_12347]
 command=python3 /var/www/app/app/Python/stout_predictor_server.py 12347
 autostart=true
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/stout_socket_server_12347.log
 
-[programm:stout_socket_server_12348]
+[program:stout_socket_server_12348]
 command=python3 /var/www/app/app/Python/stout_predictor_server.py 12348
 autostart=true
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/stout_socket_server_12348.log
 
-[programm:stout_socket_server_12349]
+[program:stout_socket_server_12349]
 command=python3 /var/www/app/app/Python/stout_predictor_server.py 12349
 autostart=true
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/stout_socket_server_12349.log
 
-[programm:stout_socket_server_12350]
+[program:stout_socket_server_12350]
 command=python3 /var/www/app/app/Python/stout_predictor_server.py 12350
 autostart=true
 autorestart=true
