Modified amount of sockets and let one load first to download files before others load

--- a/docker/app/supervisor.conf
+++ b/docker/app/supervisor.conf
@@ -18,111 +18,12 @@ autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23456.log
 
-[program:segmentation_socket_server_23457]
-command=python3 /var/www/app/app/Python/decimer_segmentation_server.py 23457
-autostart=true
-autorestart=true
-redirect_stderr=true
-stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23457.log
-
-[program:segmentation_socket_server_23458]
-command=python3 /var/www/app/app/Python/decimer_segmentation_server.py 23458
-autostart=true
-autorestart=true
-redirect_stderr=true
-stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23458.log
-
-[program:segmentation_socket_server_23459]
-command=python3 /var/www/app/app/Python/decimer_segmentation_server.py 23459
-autostart=true
-autorestart=true
-redirect_stderr=true
-stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23459.log
-
-[program:segmentation_socket_server_23460]
-command=python3 /var/www/app/app/Python/decimer_segmentation_server.py 23460
-autostart=true
-autorestart=true
-redirect_stderr=true
-stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23460.log
-
-[program:segmentation_socket_server_23461]
-command=python3 /var/www/app/app/Python/decimer_segmentation_server.py 23461
-autostart=true
-autorestart=true
-redirect_stderr=true
-stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23461.log
-
-[program:segmentation_socket_server_23462]
-command=python3 /var/www/app/app/Python/decimer_segmentation_server.py 23462
-autostart=true
-autorestart=true
-redirect_stderr=true
-stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23462.log
-
-[program:segmentation_socket_server_23463]
-command=python3 /var/www/app/app/Python/decimer_segmentation_server.py 23463
-autostart=true
-autorestart=true
-redirect_stderr=true
-stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23463.log
-
-[program:segmentation_socket_server_23464]
-command=python3 /var/www/app/app/Python/decimer_segmentation_server.py 23464
-autostart=true
-autorestart=true
-redirect_stderr=true
-stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23464.log
-
-[program:segmentation_socket_server_23465]
-command=python3 /var/www/app/app/Python/decimer_segmentation_server.py 23465
-autostart=true
-autorestart=true
-redirect_stderr=true
-stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23465.log
-
-
 [program:ocsr_socket_server_65432]
 command=python3 /var/www/app/app/Python/decimer_predictor_server.py 65432
 autostart=true
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/ocsr_socket_server_65432.log
-
-[program:ocsr_socket_server_65433]
-command=python3 /var/www/app/app/Python/decimer_predictor_server.py 65433
-autostart=true
-autorestart=true
-redirect_stderr=true
-stdout_logfile=/var/www/app/storage/logs/ocsr_socket_server_65433.log
-
-[program:ocsr_socket_server_65434]
-command=python3 /var/www/app/app/Python/decimer_predictor_server.py 65434
-autostart=true
-autorestart=true
-redirect_stderr=true
-stdout_logfile=/var/www/app/storage/logs/ocsr_socket_server_65434.log
-
-[program:ocsr_socket_server_65435]
-command=python3 /var/www/app/app/Python/decimer_predictor_server.py 65435
-autostart=true
-autorestart=true
-redirect_stderr=true
-stdout_logfile=/var/www/app/storage/logs/ocsr_socket_server_65435.log
-
-[program:ocsr_socket_server_65436]
-command=python3 /var/www/app/app/Python/decimer_predictor_server.py 65436
-autostart=true
-autorestart=true
-redirect_stderr=true
-stdout_logfile=/var/www/app/storage/logs/ocsr_socket_server_65436.log
-
-[program:ocsr_socket_server_65437]
-command=python3 /var/www/app/app/Python/decimer_predictor_server.py 65437
-autostart=true
-autorestart=true
-redirect_stderr=true
-stdout_logfile=/var/www/app/storage/logs/ocsr_socket_server_65437.log
 
 [program:stout_socket_server_12345]
 command=python3 /var/www/app/app/Python/stout_predictor_server.py 12345
@@ -131,40 +32,107 @@ autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/stout_socket_server_12345.log
 
+
+
+[program:segmentation_socket_server_23457]
+command=/bin/bash -c "sleep 120 && python3 /var/www/app/app/Python/decimer_segmentation_server.py 23457"
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23457.log
+
+[program:segmentation_socket_server_23458]
+command=/bin/bash -c "sleep 120 && python3 /var/www/app/app/Python/decimer_segmentation_server.py 23458"
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23458.log
+
+[program:segmentation_socket_server_23459]
+command=/bin/bash -c "sleep 120 && python3 /var/www/app/app/Python/decimer_segmentation_server.py 23459"
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23459.log
+
+[program:segmentation_socket_server_23460]
+command=/bin/bash -c "sleep 120 && python3 /var/www/app/app/Python/decimer_segmentation_server.py 23460"
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23460.log
+
+[program:segmentation_socket_server_23461]
+command=/bin/bash -c "sleep 120 && python3 /var/www/app/app/Python/decimer_segmentation_server.py 23461"
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23461.log
+
+[program:segmentation_socket_server_23462]
+command=/bin/bash -c "sleep 120 && python3 /var/www/app/app/Python/decimer_segmentation_server.py 23462"
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23462.log
+
+[program:segmentation_socket_server_23463]
+command=/bin/bash -c "sleep 120 && python3 /var/www/app/app/Python/decimer_segmentation_server.py 23463"
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/www/app/storage/logs/segmentation_socket_server_23463.log
+
+[program:ocsr_socket_server_65433]
+command=/bin/bash -c "sleep 120 && python3 /var/www/app/app/Python/decimer_predictor_server.py 65433"
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/www/app/storage/logs/ocsr_socket_server_65433.log
+
+[program:ocsr_socket_server_65434]
+command=/bin/bash -c "sleep 120 && python3 /var/www/app/app/Python/decimer_predictor_server.py 65434"
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/www/app/storage/logs/ocsr_socket_server_65434.log
+
+[program:ocsr_socket_server_65435]
+command=/bin/bash -c "sleep 120 && python3 /var/www/app/app/Python/decimer_predictor_server.py 65435"
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/www/app/storage/logs/ocsr_socket_server_65435.log
+
+[program:ocsr_socket_server_65436]
+command=/bin/bash -c "sleep 120 && python3 /var/www/app/app/Python/decimer_predictor_server.py 65436"
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/www/app/storage/logs/ocsr_socket_server_65436.log
+
+
 [program:stout_socket_server_12346]
-command=python3 /var/www/app/app/Python/stout_predictor_server.py 12346
+command=/bin/bash -c "sleep 120 && sleep 120&&python3 /var/www/app/app/Python/stout_predictor_server.py 12346"
 autostart=true
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/stout_socket_server_12346.log
 
 [program:stout_socket_server_12347]
-command=python3 /var/www/app/app/Python/stout_predictor_server.py 12347
+command=/bin/bash -c "sleep 120 && python3 /var/www/app/app/Python/stout_predictor_server.py 12347"
 autostart=true
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/stout_socket_server_12347.log
 
 [program:stout_socket_server_12348]
-command=python3 /var/www/app/app/Python/stout_predictor_server.py 12348
+command=/bin/bash -c "sleep 120 && python3 /var/www/app/app/Python/stout_predictor_server.py 12348"
 autostart=true
 autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/stout_socket_server_12348.log
 
-[program:stout_socket_server_12349]
-command=python3 /var/www/app/app/Python/stout_predictor_server.py 12349
-autostart=true
-autorestart=true
-redirect_stderr=true
-stdout_logfile=/var/www/app/storage/logs/stout_socket_server_12349.log
-
-[program:stout_socket_server_12350]
-command=python3 /var/www/app/app/Python/stout_predictor_server.py 12350
-autostart=true
-autorestart=true
-redirect_stderr=true
-stdout_logfile=/var/www/app/storage/logs/stout_socket_server_12350.log
 
 [program:clear_config]
 process_name=clear_config
