add 8 classifier servers to supervisor configuration

--- a/docker/app/supervisor.conf
+++ b/docker/app/supervisor.conf
@@ -133,6 +133,62 @@ autorestart=true
 redirect_stderr=true
 stdout_logfile=/var/www/app/storage/logs/stout_socket_server_12348.log
 
+[program:decimer_classifier_socket_server_11111]
+command=/bin/bash -c "python3 /var/www/app/app/Python/decimer_classifier_server.py 11111"
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/www/app/storage/logs/decimer_classifier_server_11111.log
+
+[program:decimer_classifier_socket_11112]
+command=/bin/bash -c "python3 /var/www/app/app/Python/decimer_classifier_server.py 11112"
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/www/app/storage/logs/decimer_classifier_server_11112.log
+
+[program:decimer_classifier_socket_server_11113]
+command=/bin/bash -c "python3 /var/www/app/app/Python/decimer_classifier_server.py 11113"
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/www/app/storage/logs/decimer_classifier_server_11113.log
+
+[program:decimer_classifier_socket_server_11114]
+command=/bin/bash -c "python3 /var/www/app/app/Python/decimer_classifier_server.py 11114"
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/www/app/storage/logs/decimer_classifier_server_11114.log
+
+[program:decimer_classifier_socket_server_11115]
+command=/bin/bash -c "python3 /var/www/app/app/Python/decimer_classifier_server.py 11115"
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/www/app/storage/logs/decimer_classifier_server_11115.log
+
+[program:decimer_classifier_socket_server_11116]
+command=/bin/bash -c "python3 /var/www/app/app/Python/decimer_classifier_server.py 11116"
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/www/app/storage/logs/decimer_classifier_server_11116.log
+
+[program:decimer_classifier_socket_server_11117]
+command=/bin/bash -c "python3 /var/www/app/app/Python/decimer_classifier_server.py 11117"
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/www/app/storage/logs/decimer_classifier_server_11117.log
+
+[program:decimer_classifier_socket_server_11118]
+command=/bin/bash -c "python3 /var/www/app/app/Python/decimer_classifier_server.py 11118"
+autostart=true
+autorestart=true
+redirect_stderr=true
+stdout_logfile=/var/www/app/storage/logs/decimer_classifier_server_11118.log
+
 
 [program:clear_config]
 process_name=clear_config
