--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -40,7 +40,8 @@ server {
         fastcgi_intercept_errors off;
         fastcgi_buffer_size 16k;
         fastcgi_buffers 4 16k;
-        fastcgi_read_timeout 300; 
+        fastcgi_read_timeout 300s
+        fastcgi_send_timeout 300s;
     }
 
     # deny access to .htaccess files
