feat: DECIMER Segmentation update (1.3.0)

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -41,7 +41,6 @@ RUN pip3 install --upgrade setuptools pip
 RUN pip3 install opencv-python==4.7.0.68
 RUN pip3 install matplotlib==3.4.3
 RUN pip3 install scikit-image==0.19.3
-RUN pip3 install imantics==0.1.12
 RUN pip3 install pdf2image==1.16.2
 RUN pip3 install IPython==8.10.0
 RUN pip3 install pystow==0.4.9
@@ -55,8 +54,9 @@ RUN pip3 install jpype1==1.4.1
 RUN pip3 install protobuf==3.19.0
 RUN pip3 install numpy==1.21.6
 RUN pip3 install pillow-heif==0.11.1
+RUN pip3 install scipy==1.9.3
 RUN pip3 install --no-deps git+https://github.com/Kohulan/DECIMER-Image_Transformer@v2.3.1
-RUN pip3 install --no-deps git+https://github.com/Kohulan/DECIMER-Image-Segmentation@V1.1.2
+RUN pip3 install --no-deps git+https://github.com/Kohulan/DECIMER-Image-Segmentation@v1.3.0
 RUN pip3 install --no-deps git+https://github.com/Kohulan/Smiles-TO-iUpac-Translator@V2.0.3
 RUN pip3 install --no-deps git+https://github.com/Iagea/DECIMER-Image-Classifier@146b00be2fe6f8fa6670a4255969d4747502b7f2
 
